--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,19 +1,20 @@
 pipeline {
     agent any
+    tools {
+        jdk 'JAVA_HOME'      
+        maven 'Maven'      
+    }
     stages {
-        stage('Build') {
+        stage('GIT') {
             steps {
-                echo 'Building the project...'
+               
+                git branch: 'master', url: 'https://github.com/ademnsir/AndroidApp-AdemNsir4SIM1.git'
             }
         }
-        stage('Test') {
+        stage('Compile Stage') {
             steps {
-                echo 'Running tests...'
-            }
-        }
-        stage('Deploy') {
-            steps {
-                echo 'Deploying the application...'
+               
+                sh 'mvn clean compile'
             }
         }
     }
