--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,19 +1,17 @@
 pipeline {
     agent any
     tools {
-        jdk 'JAVA_HOME'     
-        maven 'Maven'       
+        jdk 'java-17-openjdk-amd64'  
+        maven 'apache-maven-3.6.3'    
     }
     stages {
         stage('GIT') {
             steps {
-             
                 git branch: 'master', url: 'https://github.com/ademnsir/AndroidApp-AdemNsir4SIM1.git'
             }
         }
         stage('Compile Stage') {
             steps {
-             
                 sh 'mvn clean compile'
             }
         }
