--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,8 +1,9 @@
 pipeline {
     agent any
-    tools {
-        jdk 'java-17'           
-        maven 'Maven 3.6.3'      
+    environment {
+        JAVA_HOME = "/usr/lib/jvm/java-17-openjdk-amd64"
+        M2_HOME = "/opt/apache-maven-3.6.3"
+        PATH = "${env.JAVA_HOME}/bin:${env.M2_HOME}/bin:${env.PATH}"
     }
     stages {
         stage('GIT') {
