--- a/JenkinsFile
+++ b/JenkinsFile
@@ -12,7 +12,7 @@ pipeline {
             }
         }
         stage('Compile Stage') {
-            steps {
+            steps 
                 sh 'mvn clean compile'
             }
         }
